--- a/EnterPriseIn/EnterPriseIn/ViewController/NewsMain/Subviews/NewsSmallImageCell.xib
+++ b/EnterPriseIn/EnterPriseIn/ViewController/NewsMain/Subviews/NewsSmallImageCell.xib
@@ -1,21 +1,79 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="NewsSmallImageCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="NewsSmallImageCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="火星上发现预计风格子及给我个 个" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLe-x3-tx2">
+                        <rect key="frame" x="15" y="15" width="170" height="36"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="U31-5c-2gw"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018.6.20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZqR-ee-sHK">
+                        <rect key="frame" x="15" y="70" width="56.5" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="0rp-FG-LQI"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zxpic" translatesAutoresizingMaskIntoConstraints="NO" id="iID-Ml-VWH">
+                        <rect key="frame" x="197.5" y="10" width="110" height="78.5"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="80" id="E5X-JA-mcv"/>
+                            <constraint firstAttribute="width" constant="110" id="LKw-Xx-vOL"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="E5X-JA-mcv"/>
+                            </mask>
+                        </variation>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U9s-hK-n9b">
+                        <rect key="frame" x="15" y="98.5" width="305" height="0.5"/>
+                        <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="4JL-QS-dDp"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="iID-Ml-VWH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="8Um-Cr-dKm"/>
+                    <constraint firstItem="U9s-hK-n9b" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="CPV-AC-qeD"/>
+                    <constraint firstItem="BLe-x3-tx2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="CuU-kr-APW"/>
+                    <constraint firstItem="iID-Ml-VWH" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-12.5" id="Li7-8q-0ss"/>
+                    <constraint firstAttribute="trailing" secondItem="U9s-hK-n9b" secondAttribute="trailing" id="UmO-qz-i6a"/>
+                    <constraint firstAttribute="bottom" secondItem="U9s-hK-n9b" secondAttribute="bottom" constant="0.5" id="UqT-Ro-ATz"/>
+                    <constraint firstItem="iID-Ml-VWH" firstAttribute="leading" secondItem="BLe-x3-tx2" secondAttribute="trailing" constant="12.5" id="XNr-Wt-OYl"/>
+                    <constraint firstAttribute="bottom" secondItem="ZqR-ee-sHK" secondAttribute="bottom" constant="15" id="cOH-9k-Vy5"/>
+                    <constraint firstItem="U9s-hK-n9b" firstAttribute="top" secondItem="iID-Ml-VWH" secondAttribute="bottom" constant="10" id="hy5-Sq-Oaj"/>
+                    <constraint firstItem="ZqR-ee-sHK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="s8w-lW-ZC4"/>
+                    <constraint firstItem="BLe-x3-tx2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="zKa-f0-xF4"/>
+                </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <point key="canvasLocation" x="-115" y="-37"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="zxpic" width="110" height="80"/>
+    </resources>
 </document>
