--- a/EnterPriseIn/EnterPriseIn/ViewController/Person/Subviews/PersonHeadView.xib
+++ b/EnterPriseIn/EnterPriseIn/ViewController/Person/Subviews/PersonHeadView.xib
@@ -81,15 +81,25 @@
                         <constraint firstAttribute="height" constant="20" id="lsC-z1-C6p"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S2a-cV-nig">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                    <connections>
+                        <action selector="clickHeadToLogin:" destination="iN0-l3-epB" eventType="touchUpInside" id="0hU-Uk-zD4"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.2901960784" green="0.44705882349999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="g67-po-Chq" firstAttribute="top" secondItem="5Mr-jW-ajP" secondAttribute="bottom" constant="10" id="2Vf-kJ-uDA"/>
                 <constraint firstItem="z2E-PL-AeS" firstAttribute="top" secondItem="5Mr-jW-ajP" secondAttribute="bottom" constant="10" id="6Mu-PL-8NR"/>
                 <constraint firstItem="zal-9z-cte" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="40" id="GKK-lX-uW9"/>
+                <constraint firstAttribute="bottom" secondItem="S2a-cV-nig" secondAttribute="bottom" id="H4W-J5-9rO"/>
                 <constraint firstItem="zal-9z-cte" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="68" id="MWG-dL-kHr"/>
                 <constraint firstItem="XZA-IR-KJM" firstAttribute="leading" secondItem="5Mr-jW-ajP" secondAttribute="trailing" id="QAq-l2-3th"/>
+                <constraint firstItem="S2a-cV-nig" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Qyy-Tn-RBp"/>
                 <constraint firstItem="g67-po-Chq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="40" id="dPT-UF-eSv"/>
+                <constraint firstAttribute="trailing" secondItem="S2a-cV-nig" secondAttribute="trailing" id="gPr-Zb-Aie"/>
+                <constraint firstItem="S2a-cV-nig" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="h8q-iw-X53"/>
                 <constraint firstItem="5Mr-jW-ajP" firstAttribute="leading" secondItem="zal-9z-cte" secondAttribute="trailing" constant="5" id="mwu-8F-rac"/>
                 <constraint firstItem="5Mr-jW-ajP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="64" id="xuj-pt-Bjt"/>
                 <constraint firstItem="XZA-IR-KJM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="68" id="z7e-Tk-Kcz"/>
@@ -105,7 +115,7 @@
                 <outlet property="vipLabel" destination="CaZ-Qs-6Po" id="rsa-Px-qrm"/>
                 <outlet property="vipView" destination="g67-po-Chq" id="gCd-3K-tF4"/>
             </connections>
-            <point key="canvasLocation" x="-191" y="94"/>
+            <point key="canvasLocation" x="-191.5" y="94"/>
         </view>
     </objects>
     <resources>
