--- a/EnterPriseIn/EnterPriseIn/ViewController/EnterPrise/Subviews/ApplyEnterpriseEnterView.xib
+++ b/EnterPriseIn/EnterPriseIn/ViewController/EnterPrise/Subviews/ApplyEnterpriseEnterView.xib
@@ -121,7 +121,7 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CgI-mp-01s">
                             <rect key="frame" x="15" y="15" width="345" height="45"/>
-                            <color key="backgroundColor" red="0.29019607843137252" green="0.44705882352941173" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.34509803921568627" green="0.44313725490196076" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="aET-FU-qrt"/>
                             </constraints>
@@ -134,6 +134,7 @@
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.93333333333333335" green="0.94509803921568625" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="tintColor" red="0.29019607843137252" green="0.44705882352941173" blue="1" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="CgI-mp-01s" secondAttribute="trailing" constant="15" id="0cv-g2-gC4"/>
                         <constraint firstItem="CgI-mp-01s" firstAttribute="top" secondItem="01D-Lr-ppv" secondAttribute="top" constant="15" id="FDV-Vs-se6"/>
