--- a/EnterPriseIn/EnterPriseIn/ViewController/Person/Subviews/LookMyEnterPriseView.xib
+++ b/EnterPriseIn/EnterPriseIn/ViewController/Person/Subviews/LookMyEnterPriseView.xib
@@ -35,10 +35,9 @@
                         <action selector="lookMyEnterpriseInfo:" destination="iN0-l3-epB" eventType="touchUpInside" id="AZo-JD-CTc"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Look" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="916-C7-tW4">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="查看我的企业" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="916-C7-tW4">
                     <rect key="frame" x="17.5" y="25" width="329.5" height="20"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
